deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-assist
  namespace: default
  labels:
    app: dev-assist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-assist
  template:
    metadata:
      labels:
        app: dev-assist
    spec:
      containers:
        - name: dev-assist
          image: ghcr.io/datsabk/dev-assist:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 512Mi
